--- a/spaceprojectthing.html
+++ b/spaceprojectthing.html
@@ -34,7 +34,7 @@
             width: 200%;
             height: 100%;
             animation: spin 40s linear alternate infinite;
-            background: url(projects/3-3-22/moon.jpg);
+            background: url(https://valentino.lol/projects/3-3-22/moon.jpg);
         }
         @keyframes spin {
             to {
