--- a/spaceprojectthing.html
+++ b/spaceprojectthing.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body style="background: url(projects/3-3-22/space2.jpg);">
-    <div class="moon">
+    <div class="moon"> </div>
     </div>
     
 </body>
