--- a/spaceprojectthing.html
+++ b/spaceprojectthing.html
@@ -1,51 +1,171 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>science thing lol</title>
-    <style>
-        .moon{
-            width: 300px;
-            height: 300px;
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            margin: auto;
-            overflow: hidden;
-            border-radius: 50%;
-            box-shadow: 0 0 20px 20px #000 inset,0 0 20px 2px;
-        }
-        .moon::after{
-            position: absolute;
-            content: "";
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            border-color: black;
-            border-radius: 50%;
-            box-shadow: -40px -40px 50px 2px #000 inset;
-        }
-        .moon > div{
-            width: 200%;
-            height: 100%;
-            animation: spin 40s linear alternate infinite;
-            background: url(https://valentino.lol/projects/3-3-22/moon.jpg);
-        }
-        @keyframes spin {
-            to {
-                transform: translateX(-50%)
-            }
-        }
-    </style>
-</head>
-<body style="background: url(projects/3-3-22/space2.jpg);">
-    <div class="moon"> </div>
-    </div>
-    
-</body>
+<html>
+
+    <head>
+        <title>sheesh</title>
+        <meta name="description" content="space solar system">
+        <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-star-system-component@1.0.0/index.js"></script>
+
+        <!-- controls -->
+        <script src="https://unpkg.com/aframe-animation-component@^5.1.2/dist/aframe-animation-component.min.js"></script>
+        <script src="https://unpkg.com/aframe-orbit-controls@1.2.0/dist/aframe-orbit-controls.min.js"></script>
+        <link rel="stylesheet" href="projects/space/loading.css">
+        <link rel="stylesheet" href="projects/space/cursor.css">
+    </head>
+
+
+    <body>
+        <div class="portfolio-loader">
+            <div class="sun"></div>
+            <div class="sky">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="orbit orbit1">
+                    <div class="planetX planet1"></div>
+                </div>
+                <div class="orbit orbit2">
+                    <div class="planetX planet2"></div>
+                </div>
+                <div class="orbit orbit3">
+                    <div class="planetX planet3"></div>
+                </div>
+            </div>
+        <a-scene>
+
+            <!-- rotation -->
+            <a-mixin id="rotation" animation="property: rotation; loop: true; from:  0 0 0; to: 0 360 0; dur: 20000; easing: linear;"></a-mixin>
+
+            <!-- rotation -->
+            <a-mixin id="orbit" animation="property: rotation; loop: true; to: 0 360 0; dur: 40000; easing: linear;"></a-mixin>
+
+            <a-assets>
+                <img id="sun-texture" src="projects/space/sun.jpeg"
+                    crossorigin="anonymous">
+                <img id="mercury-texture" src="projects/space/mercury.jpeg"
+                    crossorigin="anonymous">
+                <img id="venus-texture" src="projects/space/venus.jpeg"
+                    crossorigin="anonymous">
+                <img id="earth-texture" src="projects/space/earth.jpeg"
+                    crossorigin="anonymous">
+                <img id="mars-texture" src="projects/space/mars.jpeg"
+                    crossorigin="anonymous">
+                <img id="jupiter-texture" src="projects/space/jupiter.jpeg"
+                    crossorigin="anonymous">
+                <img id="saturn-texture" src="projects/space/saturn.jpeg"
+                    crossorigin="anonymous">
+                <img id="uranus-texture" src="projects/space/uranus.jpeg"
+                    crossorigin="anonymous">
+                <img id="neptune-texture" src="projects/space/neptune.jpeg"
+                    crossorigin="anonymous">
+                <img id="moon-texture" src="projects/space/moon.png"
+                    crossorigin="anonymous">
+                <a-asset-item id="asteroids" response-type="arraybuffer" src="projects/space/d558c128-2ed0-4284-a0da-4d18b9163ad6_asteroides.glb"></a-asset-item>
+            </a-assets>
+
+            <!-- lighting -->
+            <a-entity id="basic-light" light="type: ambient; color: #BBB"></a-entity>
+
+            <!--use our new orbit-controls-->
+            <a-entity camera look-controls orbit-controls="target: 0 1.6 -0.5;  initialPosition: -5 5 20"></a-entity>
+
+            <a-sky color="black"></a-sky>
+            <a-entity star-system="count: 1000; radius: 250; depth: 0"></a-entity>
+            
+
+            <!-- large rings we can use to guide our orbits -->
+            <a-entity geometry="primitive: torus; radius: 3; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 4.24; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 5.24; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 6.25; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 12.1; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 15.55; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 18.05; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+            <a-entity geometry="primitive: torus; radius: 20.05; radiusTubular: 0.01;segmentsTubular: 50" material="color: #FFFFFF;opacity: 0.3"
+                rotation="90 0 0" scale="2 2 0.1"></a-entity>
+
+
+            <!-- sun rotation and light -->
+            <a-sphere id="sun" position="0 0 0" radius="4" src="#sun-texture" mixin="rotation" light="type: point"
+                material="shader: flat;"></a-sphere>
+
+            <a-entity id="asteroid-belt" gltf-model="#asteroids" scale="2.1 2.1 2.1" position="0 0 0" mixin="rotation"
+                animation="dur: 60000;"></a-entity>
+
+            <!-- our basic planets, we're going to wrap them so we can apply
+            orbits to them and also give them rotation-->
+            <a-entity id="orbit-mercury" mixin="orbit" animation="dur: 20000;">
+                <a-sphere id="mercury" position="0 0 6" radius=".4" src="#mercury-texture" mixin="orbit"></a-sphere>
+            </a-entity>
+
+            <a-entity id="orbit-venus" mixin="orbit">
+                <a-sphere id="venus" position="0 0 8.5" radius=".4" src="#venus-texture" mixin="rotation"></a-sphere>
+            </a-entity>
+
+            <a-entity id="orbit-mars" mixin="orbit">
+                <a-sphere id="mars" position="0 0 12.5" radius=".4" src="#mars-texture" mixin="rotation"></a-sphere>
+            </a-entity>
+
+            <a-entity id="orbit-jupiter" mixin="orbit" animation="dur: 90000;">
+                <a-sphere id="jupiter" position="0 0 24" radius="2.5" src="#jupiter-texture" mixin="rotation"></a-sphere>
+            </a-entity>
+
+
+            <!--there are two orbits here- the earth itself and the earth around the moon-->
+            <a-entity id="orbit-earth" mixin="orbit" animation="dur: 30000;">
+                <a-entity id="earth-and-moon" position="0 0 10.5">
+                    <a-entity id="earth-container">
+                        <a-sphere position="0 0 0" radius=".5" id="earth" src="#earth-texture" mixin="rotation"></a-sphere>
+                        <a-entity id="moon-container" mixin="orbit">
+                            <a-sphere position="-1 0 0" radius=".10" id="moon" src="#moon-texture"></a-sphere>
+                        </a-entity>
+                    </a-entity>
+                </a-entity>
+            </a-entity>
+
+            <!--we'll need to wrap these further to get our orbits working-->
+            <a-entity id="orbit-saturn" mixin="orbit">
+                <a-entity id="saturn-container" position="0 0 31">
+                    <a-sphere radius="1.8" id="saturn" src="#saturn-texture" mixin="rotation"></a-sphere>
+                    <a-entity id="saturn-ring-1" geometry="primitive: torus; radius: 3.2; radiusTubular: 0.1;segmentsTubular: 50"
+                        material="color: #57524A;" rotation="90 0 0" scale="1 1 0.1"></a-entity>
+                    <a-entity id="saturn-ring-2" geometry="primitive: torus; radius: 2.4; radiusTubular: 0.2;segmentsTubular: 50"
+                        material="color: #A29A87;" rotation="90 0 0" scale="1 1 0.1"></a-entity>
+                </a-entity>
+            </a-entity>
+
+            <a-entity id="orbit-uranus" mixin="orbit" animation="dur: 70000;">
+                <a-entity id="uranus-container" position="0 0 36">
+                    <a-sphere id="uranus" radius=".75" src="#uranus-texture" mixin="rotation"></a-sphere>
+                    <a-entity id="uranus-ring" geometry="primitive: torus; radius: 1.5; radiusTubular: 0.01;segmentsTubular: 50"
+                        material="color: #FFFFFF;" rotation="-10 90 0" scale="1 1 0.1"></a-entity>
+                </a-entity>
+            </a-entity>
+
+            <a-entity id="orbit-neptune" mixin="orbit" animation="dur: 35000;">
+                <a-entity id="neptune-container" position="0 0 40">
+                    <a-sphere id="neptune" radius="1" src="#neptune-texture" mixin="rotation"></a-sphere>
+                    <a-entity id="neptune-ring-1" geometry="primitive: torus; radius: 2; radiusTubular: 0.01;segmentsTubular: 50"
+                        material="color: #FFFFFF;opacity: 0.8" rotation="90 0 0" scale="1 1 0.1"></a-entity>
+                    <a-entity id="neptune-ring-2" geometry="primitive: torus; radius: 1.7; radiusTubular: 0.05;segmentsTubular: 50"
+                        material="color: #FFFFFF;opacity: 0.8" rotation="90 0 0" scale="1 1 0.1"></a-entity>
+                    <a-entity id="neptune-ring-3" geometry="primitive: torus; radius: 1.3; radiusTubular: 0.01;segmentsTubular: 50"
+                        material="color: #FFFFFF;opacity: 0.8" rotation="90 0 0" scale="1 1 0.1"></a-entity>
+                </a-entity>
+            </a-entity>
+
+        </a-scene>
+    </body>
+
 </html>
