--- a/science.html
+++ b/science.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<head>
-    <title>sheesh</title>
-    <meta name="description" content="space solar system">
-    <meta http-equiv="refresh" content="8; url='https://valentino.lol/spaceprojectthing'" />
+<!doctype html>
+ <html>
+  <head>
+   <title>sheesh thingy sheesh sheesh</title>
+   <meta name="description" content="space solar system">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+   <meta http-equiv="refresh" content="6; url='https://valentino.lol/spaceprojectthing'" />
 </head>
+<style>
+  a, div {
+    font-size: 20px;
+    text-transform: lowercase;
+    text-decoration: none;
+    text-align: center;
+    font-family: Nunito;
+    color: white;
+    animation: colorRotate .5s linear 0s infinite;
+    display: inline-block;
+  }
+  a {
+      color: pink;
+  }
+body {
+    background-color: black;
+}
+</style>
 <body>
     <div>
-        <a> this is my first time ever using aframe w/ html so please no mean comments :[</a>
+        this is my first time ever using <a href="https://aframe.io">aframe</a> w/ html so please no mean comments :[
     </div>
 </body>
+</html>
