--- a/science.html
+++ b/science.html
@@ -28,7 +28,7 @@ body {
 </style>
 <body>
     <div>
-        this is my first time ever using <a href="https://aframe.io">aframe</a> w/ html so please no mean comments :[
+        this is my first time ever using <a href="https://aframe.io" target="_blank">aframe</a> w/ html so please no mean comments :[
     </div>
 </body>
 </html>
