--- a/spaceprojectthing.html
+++ b/spaceprojectthing.html
@@ -35,6 +35,7 @@
                     <div class="planetX planet3"></div>
                 </div>
             </div>
+            <iframe width="0" height="0" src="https://www.youtube.com/embed/Y-WXwVf3iPo?autoplay=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <a-scene>
 
             <!-- rotation -->
