--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
  <html>
   <head>
    <title>hi</title>
-   <meta property="og:title" content="otw to popeyes" />
+   <meta property="og:title" content="im in thе o with some felons" />
    <meta name="theme-color" content="#FFFFFF">
    <link type="application/json+oembed" href="https://valentino.lol/js/embed.json"/>
-   <meta name="twitter:card" content="player"> <meta name="twitter:player" content="https://valentino.lol/vids/family.webm"> <meta name="twitter:player:stream" content="https://valentino.lol/vids/family.webm"> <meta name="twitter:player:stream:content_type" content="video/mp4">
+   <meta name="twitter:card" content="player"> <meta name="twitter:player" content="https://valentino.lol/vids/under.webm"> <meta name="twitter:player:stream" content="https://valentino.lol/vids/under.webm"> <meta name="twitter:player:stream:content_type" content="video/mp4">
    <link id="icon-a" rel="shortcut icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/cold-face_1f976.png" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
