--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>hi</title>
    <meta property="og:title" content="broke my heart so i went to the bank 💔" />
    <meta name="theme-color" content="#FFFFFF">
-   <-- <link type="application/json+oembed" href="https://valentino.lol/js/embed.json"/> -->
+   <!-- <link type="application/json+oembed" href="https://valentino.lol/js/embed.json"/> -->
    <meta name="twitter:card" content="player"> <meta name="twitter:player" content="https://valentino.lol/vids/pt.mp4"> <meta name="twitter:player:stream" content="https://valentino.lol/vids/pt.mp4"> <meta name="twitter:player:stream:content_type" content="video/mp4">
    <link id="icon-a" rel="shortcut icon" type="image/png" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/cold-face_1f976.png" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
